--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Opdavies\\Sculpin\\Bundle\\TwigMarkdownBundle\\": ""
+            "Opdavies\\Sculpin\\Bundle\\TwigMarkdownBundle\\": "src"
         }
     }
 }
